<resources>
    <string name="app_name">plasiette</string>
    <string name="user">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="email">E-MAIL</string>
    <string name="phone">TELEPHONE</string>
    <string name="sign_up">SIGN UP</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="vals">Valoraciones</string>
    <string name="perfil">Perfil</string>
    <string name="pedidos">Pedidos</string>
    <string name="menu">Menú</string>
    <string name="acerca">Acerca de</string>
    <string name="order_today">Hoy</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="contacto">Contacto</string>
    <string name="calificanos">Calificanos</string>
    <string name="Report">Reportar error</string>
    <string name="comunicate">Comunicate</string>
    <string name="action_settings">Configuración</string>
    <string name="sign_in">Sign in</string>
    <string name="send">Enviar</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="argument"> Este plato tipico del lugar pertenece a la tradicion cultural de la antigua alta sociedad inca, plato que permanecio lugeo del vierreinato por su excelente sazon </string>
    <string name="title_activity_valoraciones">ValoracionesActivity</string>
</resources>
