<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/pedidos" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/vals" />
    </group>

    <item android:title="@string/comunicate">
        <menu>
            <item
                android:id="@+id/nav_acerca"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/acerca" />
            <item
                android:id="@+id/nav_contacto"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contacto" />

            <item
                android:id="@+id/nav_calificanos"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/calificanos" />
            <item
                android:id="@+id/nav_report_error"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Report" />
        </menu>
    </item>

</menu>
