<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"/>
            <EditText
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:hint="@string/user"
                android:ems="10"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:padding="10dip"
                android:drawableStart="@drawable/account"
                android:background="@drawable/bordert" />
            <EditText
                android:gravity="center"
                android:textColorHint="#ffffff"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/password"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:padding="10dip"
                android:drawableStart="@drawable/lock"
                android:background="@drawable/bordert" />
            <Button
                android:id="@+id/button_sign_in"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/border3"
                android:text="@string/sign_in"
                android:layout_marginBottom="100dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp">
                <Button
                    android:id="@+id/sign_in_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign in?"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/underline"/>
                <View
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@drawable/copy"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">
                </View>
                <Button
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot password?"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/underline"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>